Changes the group sign representation. This simplifies the sign manager drastically which now only relies on the default manager data structure